force-app/main/default/objects/Case/fields/Survey_Invitation_Url__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_Url__c</fullName>
    <label>Survey Invitation Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>