force-app/main/default/objects/Case/fields/Survey_Latest_Score__c.field-meta.xml
<CustomField>
    <fullName>Survey_Latest_Score__c</fullName>
    <label>Survey Latest Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>