force-app/main/default/objects/Case/fields/Survey_Latest_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Latest_Score_Date__c</fullName>
    <label>Survey Latest Score Date</label>
    <type>DateTime</type>
</CustomField>